OpenDNSSEC 2.1.8 - 2021-02-20

* OPENDNSSEC-954: Upgrade autoconf/automake configuration chain for
  version 2.69/1.16.2.
* SUPPORT-261: Fix to crash when using ods-enforcer set-policy command.
* OPENDNSSEC-953: Fix to crash in case zone file not present while getting
  a signconf update and state flush command.
  Thanks to Stefan Ubbink from SIDN for the co-operation in this fix.
* OPENDNSSEC-951: Modify the purging of keys, to make it automatic to purge
  keys from the HSM.
  Thanks to Stefan Ubbink from SIDN for the co-operation in this fix.
* OPENDNSSEC-950: Fix that caused crash when signer was offline for a
  prolonged period (but the enforcer wasn't) in the middle of a ZSK roll.
* OPENDNSSEC-952: memory leak in when receiving NOTIFY for non-existent
  zone (Thanks Sébastien Tisserant to for reporting).

OpenDNSSEC 2.1.7 - 2020-10-05

* OPENDNSSEC-949: Fix for migration bug not keeping proper parameters of NSEC3
  signed zones. Amongst others the zone become NSEC.  Loading the policies
  fixes the situation, migration scripts now corrected.  Since 1.4 does not
  require a salt, a resalt might be automatic after migrating, as this is
  a required parameter.
* OPENDNSSEC-948: do not recreate signatures for keys that are moving out
  this fixes unexpected double signatures in the zone.
* SUPPORT-253: Incorrect keytag used when using Combined Signing keys (CSK)
  (Thanks to Simon Arlott)
* SUPPORT-257: Export keys by locator (Thansk to Simon Arlott)
* SUPPORT-222: Support ED25519/ED448 keys.  This requires library ldns 1.7.0
  or better, otherwise unavailable.  (Thanks again to Simon Arlott)
* SUPPORT-260: Crash on OpenBSD systems in ixfr_del_rr; possible unverified
  fix.
* Load libsqlite3.so.0 and fall back on libsqlite3.so.0 to allow to run
  migration tool on systems without libsqlite3.so.0 soft link.
  (Thanks to Paul Wouters)
* Some compilation warnings, o.a. gcc10 related, code quality and
  initialization improvements.