@@ -1,3 +1,9 @@
+OpenDNSSEC 2.1.9 - 20210-04-??
+
+* OPENDNSSEC-955: Prevent concurrency between C_Login/C_OpenSession and
+  C_FindObject in PKCS#11 operations as some HSMs do not like this and
+  the key may (transiently) not be available.
+
 OpenDNSSEC 2.1.8 - 2021-02-20
 
 * OPENDNSSEC-954: Upgrade autoconf/automake configuration chain for
